--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Second Repo</title>
+    <title>My Second Github Repo</title>
+
 </head>
 <body>
+    <h1>Finally korte parlam</h1>
+    <h2>Baba re Baba</h2>
     
 </body>
 </html>
