--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Finally korte parlam</h1>
     <h2>Baba re Baba</h2>
+    <p>Onek pera dise hala</p>
+    <p>but Finally done</p>
+    <img src="photo/bacon.jpg" alt="">
     
 </body>
 </html>
