another pic added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>Onek pera dise hala</p>
     <p>but Finally done</p>
     <img src="photo/bacon.jpg" alt="">
+    <img src="photo/smile.png" alt="">
     
 </body>
 </html>
